<resources>
    <string name="app_name" translatable="false">OneSquare</string>
    <string name="content_authority" translatable="false">com.a_leonov.onesquare.app</string>
    <string name="venue_distance">Distance: %1$2d meters</string>
    <string name="venue_address">Address: %1$2s</string>
    <!--<string name="venue_facebook">Facebook: %1$2s</string>-->
    <!--<string name="venue_twitter">Twitter: %1$2s</string>-->
    <string name="venue_phone">Tel.: %1$2s</string>
    <!--<string name="venue_instagramm">Instagramm: %1$2s</string>-->
    <string name="venue_thumbnail_size" translatable="false">width500</string>
    <string name="venue_detail_size" translatable="false">width800</string>
    <string name="venue_widget_rating">Rating: %1$2d of 10</string>

    <!--*********************Descriptions******************************-->
    <string name="discription_ratingbar">Venue rating</string>
    <string name="description_venueImage">Venue image</string>
    <string name="description_venuedist">Distance</string>
    <string name="description_workhours">work hours</string>
    <string name="action_share">Share</string>
    <string name="description_address" translatable="false">Address</string>
    <string name="send_to">Send to..</string>
    <string name="tip_thumbnail_size" translatable="false">width64</string>
  
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label" translatable="false">Location Updates</string>

    <string name="permission_rationale" translatable="false">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation" translatable="false">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="ok" translatable="false">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="empty_string">No data</string>
    <string name="empty_distance">Distance unknown</string>
    <string name="widget_title" translatable="false">OneSquare</string>
    <string name="noInternet">No internet connection</string>
    <string name="saved_defaultCity" translatable="false">Moscow,RU</string>
    <string name="saved_city" translatable="false">preference_city</string>
    <string name="preference_file_key" translatable="false">com.a_leonov.onesquare.PREFERENCE_FILE_KEY</string>
    <string name="facebook_desc">facebook</string>
    <string name="twitter_desc">twitter</string>
    <string name="instagram_desc">instagram</string>
    <string name="userPhoto_desc">user</string>
</resources>
