<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_margin="@dimen/material_component_cards_space_between_cards"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:background="@color/material_grey_300"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_venueImage"/>

        <TextView
            android:id="@+id/venue_name"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/material_light_white"
            android:paddingLeft="@dimen/material_component_cards_left_and_right_padding"
            android:paddingRight="@dimen/material_component_cards_left_and_right_padding"
            android:paddingTop="@dimen/material_component_cards_top_and_bottom_padding" />

        <RatingBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/venue_rating"
            android:numStars="@integer/rating_star_count"
            android:mirrorForRtl="true"
            android:contentDescription="@string/discription_ratingbar"/>

        <TextView
            android:id="@+id/venue_distance"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/material_light_white"
            android:paddingLeft="@dimen/material_component_cards_left_and_right_padding"
            android:paddingRight="@dimen/material_component_cards_left_and_right_padding"
            android:paddingTop="@dimen/material_component_cards_primary_title_bottom_padding"
            android:contentDescription="@string/description_venuedist"/>

        <TextView
            android:id="@+id/venue_address"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/material_light_white"
            android:paddingLeft="@dimen/material_component_cards_left_and_right_padding"
            android:paddingRight="@dimen/material_component_cards_left_and_right_padding"
            android:paddingTop="@dimen/material_component_cards_primary_title_bottom_padding"
            android:contentDescription="@string/description_address"/>


        <TextView
            android:id="@+id/venue_workhours"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/material_light_white"
            android:paddingBottom="@dimen/material_component_cards_top_and_bottom_padding"
            android:paddingLeft="@dimen/material_component_cards_left_and_right_padding"
            android:paddingRight="@dimen/material_component_cards_left_and_right_padding"
            android:contentDescription="@string/description_workhours"/>
    </LinearLayout>

</android.support.v7.widget.CardView>
